# planq

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: ARCHITECTURE.md
docs/plans/: 2026-03-04-ai-native-innovations.md  2026-03-04-implementation-plan.md  2026-03-04-jit-planning-design.md  2026-03-04-planq-design.md
examples/: PLANDB_PROMPT.md  build-docs-site-claude.sh  build-docs-site-gemini.sh  build-docs-site.sh  build-mini-gpt-claude.sh
experiments/01-fibonacci-api/: experiment-log.md  pyrightconfig.json
experiments/01-fibonacci-api/fibonacci_api/: __init__.py  api.py  fib.py
experiments/01-fibonacci-api/tests/: test_api.py  test_fib.py
experiments/01-fibonacci-api/typings/flask/: __init__.pyi
experiments/02-with-vs-without/: EXPERIMENT.md
experiments/02-with-vs-without/with-planq/: README.md  pyproject.toml
experiments/02-with-vs-without/with-planq/quicknote/: cli.py  storage.py
experiments/02-with-vs-without/with-planq/tests/: test_quicknote_cli.py
experiments/02-with-vs-without/without-planq/: pyproject.toml  work-log.md
experiments/02-with-vs-without/without-planq/quicknote/: cli.py  db.py
experiments/02-with-vs-without/without-planq/tests/: test_cli.py
mini-gpt-rust/: Cargo.toml
mini-gpt-rust/src/: data.rs  main.rs  model.rs  tensor.rs  tokenizer.rs
src/: main.rs
src/cli/: artifact.rs  events.rs  mod.rs  project.rs  task.rs
src/db/: meta.rs  mod.rs  projects.rs  schema.rs  sweeper.rs  tasks.rs  tests.rs
src/mcp/: mod.rs  server.rs  tools.rs
src/models/: mod.rs  project.rs
src/server/: mod.rs  routes.rs  sse.rs
tests/: functional_test.sh
