[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quicknote"
version = "0.1.0"
description = "Local SQLite-backed note-taking CLI"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.0",
]

[project.scripts]
quicknote = "quicknote.cli:cli"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
